fixed post-game text in dark mode

--- a/docs/css/WordChain.css
+++ b/docs/css/WordChain.css
@@ -267,6 +267,8 @@ hr {
     font-size: .75rem;
     margin-top: 20px;
     text-align: center;
+    color: var(--primary-fg);
+    background: var(--background-fg);
 }
 
 /*
@@ -541,6 +543,8 @@ button.action-button {
 */
 
 .results-div {
+    color: var(--primary-fg);
+    background: var(--background-fg);
 }
 
 .score-div {
